--- a/.github/workflows/clang-format-linter.yml
+++ b/.github/workflows/clang-format-linter.yml
@@ -12,3 +12,4 @@ jobs:
     - uses: InsightSoftwareConsortium/ITKClangFormatLinterAction@master
       with:
         itk-branch: master
+        error-message: "Remote module code is inconsistent with ITK Coding Style as of 20241205."
